@@ -1,5 +1,6 @@
-.cursor-default    { cursor: default; }
+.cursor-default    { cursor: default;     }
 .cursor-notallowed { cursor: not-allowed; }
-.cursor-progress   { cursor: progress; }
-.cursor-pointer    { cursor: pointer; }
-.cursor-text       { cursor: text; }
+.cursor-progress   { cursor: progress;    }
+.cursor-pointer    { cursor: pointer;     }
+.cursor-text       { cursor: text;        }
+.cursor-inherit    { cursor: inherit;     }
