@@ -4,6 +4,7 @@
   * (color, bg) white, black, gray hover states
   * (type) tabular-nums
   * (border) .border, .border-XY, drop .bX
+  * (cursor) .cursor-inherit
 
 # 0.17.0 (2020-06-07)
 
